stop double tap zoom on mobile for main button

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -180,4 +180,5 @@ $shadows-big: multiple-box-shadow(100);
 	height: 115px;
 	width: 115px;
 	margin-bottom: 15px;
+	touch-action: manipulation;
 }
